
= ActiveMerchant CHANGELOG

== HEAD
* dLocal: Add transaction query API(s) request [almalee24] #4584
* MercadoPago: Add transaction inquire request [molbrown] #4588
* Worldpay: Add transaction inquire request [molbrown] #4592
* Alelo: Adding homologation changes [heavyblade] #4590
* Adyen: Map standard error codes for `processing_error`, `config_error`, `invalid_amount`, and `incorrect_address` [ajawadmirza] #4593
* MerchantE: Add support for recurring transactions [naashton] #4594
* CyberSource: Add support for `discount_management_indicator`, `purchase_tax_amount`, `installment_total_amount`, and `installment_annual_interest_rate` fields. [rachelkirk] #4595
* Shift4: Remove `customer` from refund and `clerk` from store requests [ajawadmirza] #4596
* TransFirst Transaction Express: Update xml prefixing to be compatible with Nokogiri 1.13.4 [dsmcclain] #4582
* Iveri: Adding support for external MPI 3DS2 [heavyblade] #4598
* Credorax: Pass Network Transaction ID on MIT [jherreraa] #4600
* iVeri: Remove schema validation on Live requests [curiousepic] #4606
* Beanstream: Adding Third Party 3DS fields [heavyblade] #4602
* Borgun: Add support for 3DS preauth [ajawadmirza] #4603
* Cardstream: Add third party 3ds2 support [sainterman] #4570
* Accept both formats of Canadian routing numbers [molbrown] #4568
* DLocal: Add support for `original_order_id` [rachelkirk] #4605
* CheckoutV2: Add support for `merchant_initiated_transaction_id` [rachelkirk] #4611
* CardConnect: Add stored credential & pass any valid `ecomind` field [ajawadmirza] #4609
* Alelo: Trigger access token refresh on 404 [curiousepic] #4614
* DLocal: Add Network Tokens [gasb150] #4608
* Redsys: enable NTID generation with zero-value verify [jcreiff] #4615
* IPG: Add support for passing in `store_id` on transactions [aenand] #4619
* Adyen: Field support for Level 2 and level 3 information [sainterman] #4617
* Add alternate alpha2 country code for Kosovo [jcreiff] #4622